resources/lexiparse/ArtGrammarParser.py
# Generated from ArtGrammar.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ArtGrammarParser ( Parser ):

    grammarFileName = "ArtGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'['", "']'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'{'", "'}'", 
                     "'.'", "'='", "'&'" ]

    symbolicNames = [ "<INVALID>", "TOSTR", "PRINT", "LST_ADD", "TRUE", 
                      "FALSE", "BOOL", "RECTANGLE", "SQUARE", "CIRCLE", 
                      "DOT", "STRAIGHT", "ARC", "PIXEL", "IF", "ELSE", "ELIF", 
                      "OUTLINE", "DRAW", "SIZE", "FOR", "DEF", "FILL", "CANVAS", 
                      "RGB", "CONSTANT", "GLOBAL", "BREAK", "CONTINUE", 
                      "LIST", "STRING", "SQR_START", "SQR_END", "STR_LITERAL", 
                      "INTEGER", "IDENTIFIER", "ADD", "SUB", "MUL", "DIV", 
                      "INCDEC_OP", "COND_OP", "LOGICAL_OP", "PAREN_START", 
                      "PAREN_END", "CURLY_START", "CURLY_END", "DOT_NOTATION", 
                      "ASSIGN_OP", "AMPSAND", "SEPARATOR", "SEMICOL_SEP", 
                      "WS" ]

    RULE_expr = 0
    RULE_func = 1
    RULE_consts = 2
    RULE_glob = 3
    RULE_func_params = 4
    RULE_code = 5
    RULE_dec = 6
    RULE_loop = 7
    RULE_loop_body = 8
    RULE_loop_init = 9
    RULE_loop_cond = 10
    RULE_loop_incdec = 11
    RULE_init = 12
    RULE_init_int = 13
    RULE_init_bool = 14
    RULE_init_str = 15
    RULE_init_lst = 16
    RULE_lst_def = 17
    RULE_lst_val = 18
    RULE_lst_access = 19
    RULE_lst_add_val = 20
    RULE_conv_tostr = 21
    RULE_func_call = 22
    RULE_call_params = 23
    RULE_print_text = 24
    RULE_if_else = 25
    RULE_if_cond = 26
    RULE_elif_cond = 27
    RULE_else_cond = 28
    RULE_condition_base = 29
    RULE_condition_body = 30
    RULE_condition = 31
    RULE_ifel_body = 32
    RULE_math_expr = 33
    RULE_computation = 34
    RULE_cgcompute = 35
    RULE_gcompute = 36
    RULE_ugcompute = 37
    RULE_mcomputes = 38
    RULE_compute = 39
    RULE_math_op = 40
    RULE_concat = 41
    RULE_canvas_def = 42
    RULE_outline_def = 43
    RULE_outline_params = 44
    RULE_rgb_def = 45
    RULE_fill_def = 46
    RULE_fill_params = 47
    RULE_draw_shape = 48
    RULE_draw_params = 49
    RULE_size_shape = 50
    RULE_size_params = 51
    RULE_two_params = 52
    RULE_value_type = 53
    RULE_data_type = 54

    ruleNames =  [ "expr", "func", "consts", "glob", "func_params", "code", 
                   "dec", "loop", "loop_body", "loop_init", "loop_cond", 
                   "loop_incdec", "init", "init_int", "init_bool", "init_str", 
                   "init_lst", "lst_def", "lst_val", "lst_access", "lst_add_val", 
                   "conv_tostr", "func_call", "call_params", "print_text", 
                   "if_else", "if_cond", "elif_cond", "else_cond", "condition_base", 
                   "condition_body", "condition", "ifel_body", "math_expr", 
                   "computation", "cgcompute", "gcompute", "ugcompute", 
                   "mcomputes", "compute", "math_op", "concat", "canvas_def", 
                   "outline_def", "outline_params", "rgb_def", "fill_def", 
                   "fill_params", "draw_shape", "draw_params", "size_shape", 
                   "size_params", "two_params", "value_type", "data_type" ]

    EOF = Token.EOF
    TOSTR=1
    PRINT=2
    LST_ADD=3
    TRUE=4
    FALSE=5
    BOOL=6
    RECTANGLE=7
    SQUARE=8
    CIRCLE=9
    DOT=10
    STRAIGHT=11
    ARC=12
    PIXEL=13
    IF=14
    ELSE=15
    ELIF=16
    OUTLINE=17
    DRAW=18
    SIZE=19
    FOR=20
    DEF=21
    FILL=22
    CANVAS=23
    RGB=24
    CONSTANT=25
    GLOBAL=26
    BREAK=27
    CONTINUE=28
    LIST=29
    STRING=30
    SQR_START=31
    SQR_END=32
    STR_LITERAL=33
    INTEGER=34
    IDENTIFIER=35
    ADD=36
    SUB=37
    MUL=38
    DIV=39
    INCDEC_OP=40
    COND_OP=41
    LOGICAL_OP=42
    PAREN_START=43
    PAREN_END=44
    CURLY_START=45
    CURLY_END=46
    DOT_NOTATION=47
    ASSIGN_OP=48
    AMPSAND=49
    SEPARATOR=50
    SEMICOL_SEP=51
    WS=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ArtGrammarParser.EOF, 0)

        def consts(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArtGrammarParser.ConstsContext)
            else:
                return self.getTypedRuleContext(ArtGrammarParser.ConstsContext,i)


        def glob(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArtGrammarParser.GlobContext)
            else:
                return self.getTypedRuleContext(ArtGrammarParser.GlobContext,i)


        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArtGrammarParser.FuncContext)
            else:
                return self.getTypedRuleContext(ArtGrammarParser.FuncContext,i)


        def getRuleIndex(self):
            return ArtGrammarParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = ArtGrammarParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ArtGrammarParser.CONSTANT:
                self.state = 110
                self.consts()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ArtGrammarParser.GLOBAL:
                self.state = 116
                self.glob()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ArtGrammarParser.DEF:
                self.state = 122
                self.func()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self.match(ArtGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(ArtGrammarParser.DEF, 0)

        def IDENTIFIER(self):
            return self.getToken(ArtGrammarParser.IDENTIFIER, 0)

        def PAREN_START(self):
            return self.getToken(ArtGrammarParser.PAREN_START, 0)

        def PAREN_END(self):
            return self.getToken(ArtGrammarParser.PAREN_END, 0)

        def CURLY_START(self):
            return self.getToken(ArtGrammarParser.CURLY_START, 0)

        def CURLY_END(self):
            return self.getToken(ArtGrammarParser.CURLY_END, 0)

        def code(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArtGrammarParser.CodeContext)
            else:
                return self.getTypedRuleContext(ArtGrammarParser.CodeContext,i)


        def func_params(self):
            return self.getTypedRuleContext(ArtGrammarParser.Func_paramsContext,0)


        def getRuleIndex(self):
            return ArtGrammarParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc" ):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)




    def func(self):

        localctx = ArtGrammarParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(ArtGrammarParser.DEF)
                self.state = 131
                self.match(ArtGrammarParser.IDENTIFIER)
                self.state = 132
                self.match(ArtGrammarParser.PAREN_START)
                self.state = 133
                self.match(ArtGrammarParser.PAREN_END)
                self.state = 134
                self.match(ArtGrammarParser.CURLY_START)
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ArtGrammarParser.PRINT) | (1 << ArtGrammarParser.BOOL) | (1 << ArtGrammarParser.RECTANGLE) | (1 << ArtGrammarParser.SQUARE) | (1 << ArtGrammarParser.CIRCLE) | (1 << ArtGrammarParser.DOT) | (1 << ArtGrammarParser.STRAIGHT) | (1 << ArtGrammarParser.ARC) | (1 << ArtGrammarParser.PIXEL) | (1 << ArtGrammarParser.IF) | (1 << ArtGrammarParser.FOR) | (1 << ArtGrammarParser.CANVAS) | (1 << ArtGrammarParser.LIST) | (1 << ArtGrammarParser.STRING) | (1 << ArtGrammarParser.IDENTIFIER))) != 0):
                    self.state = 135
                    self.code()
                    self.state = 140
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 141
                self.match(ArtGrammarParser.CURLY_END)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.match(ArtGrammarParser.DEF)
                self.state = 143
                self.match(ArtGrammarParser.IDENTIFIER)
                self.state = 144
                self.match(ArtGrammarParser.PAREN_START)
                self.state = 145
                self.func_params()
                self.state = 146
                self.match(ArtGrammarParser.PAREN_END)
                self.state = 147
                self.match(ArtGrammarParser.CURLY_START)
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ArtGrammarParser.PRINT) | (1 << ArtGrammarParser.BOOL) | (1 << ArtGrammarParser.RECTANGLE) | (1 << ArtGrammarParser.SQUARE) | (1 << ArtGrammarParser.CIRCLE) | (1 << ArtGrammarParser.DOT) | (1 << ArtGrammarParser.STRAIGHT) | (1 << ArtGrammarParser.ARC) | (1 << ArtGrammarParser.PIXEL) | (1 << ArtGrammarParser.IF) | (1 << ArtGrammarParser.FOR) | (1 << ArtGrammarParser.CANVAS) | (1 << ArtGrammarParser.LIST) | (1 << ArtGrammarParser.STRING) | (1 << ArtGrammarParser.IDENTIFIER))) != 0):
                    self.state = 148
                    self.code()
                    self.state = 153
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 154
                self.match(ArtGrammarParser.CURLY_END)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTANT(self):
            return self.getToken(ArtGrammarParser.CONSTANT, 0)

        def PIXEL(self):
            return self.getToken(ArtGrammarParser.PIXEL, 0)

        def init_int(self):
            return self.getTypedRuleContext(ArtGrammarParser.Init_intContext,0)


        def getRuleIndex(self):
            return ArtGrammarParser.RULE_consts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConsts" ):
                listener.enterConsts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConsts" ):
                listener.exitConsts(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConsts" ):
                return visitor.visitConsts(self)
            else:
                return visitor.visitChildren(self)




    def consts(self):

        localctx = ArtGrammarParser.ConstsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_consts)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(ArtGrammarParser.CONSTANT)
            self.state = 159
            self.match(ArtGrammarParser.PIXEL)
            self.state = 160
            self.init_int()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GLOBAL(self):
            return self.getToken(ArtGrammarParser.GLOBAL, 0)

        def PIXEL(self):
            return self.getToken(ArtGrammarParser.PIXEL, 0)

        def init_int(self):
            return self.getTypedRuleContext(ArtGrammarParser.Init_intContext,0)


        def getRuleIndex(self):
            return ArtGrammarParser.RULE_glob

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlob" ):
                listener.enterGlob(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlob" ):
                listener.exitGlob(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlob" ):
                return visitor.visitGlob(self)
            else:
                return visitor.visitChildren(self)




    def glob(self):

        localctx = ArtGrammarParser.GlobContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_glob)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(ArtGrammarParser.GLOBAL)
            self.state = 163
            self.match(ArtGrammarParser.PIXEL)
            self.state = 164
            self.init_int()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_paramsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ArtGrammarParser.IDENTIFIER, 0)

        def SEPARATOR(self):
            return self.getToken(ArtGrammarParser.SEPARATOR, 0)

        def func_params(self):
            return self.getTypedRuleContext(ArtGrammarParser.Func_paramsContext,0)


        def getRuleIndex(self):
            return ArtGrammarParser.RULE_func_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_params" ):
                listener.enterFunc_params(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_params" ):
                listener.exitFunc_params(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_params" ):
                return visitor.visitFunc_params(self)
            else:
                return visitor.visitChildren(self)




    def func_params(self):

        localctx = ArtGrammarParser.Func_paramsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func_params)
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.match(ArtGrammarParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.match(ArtGrammarParser.IDENTIFIER)
                self.state = 168
                self.match(ArtGrammarParser.SEPARATOR)
                self.state = 169
                self.func_params()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dec(self):
            return self.getTypedRuleContext(ArtGrammarParser.DecContext,0)


        def init(self):
            return self.getTypedRuleContext(ArtGrammarParser.InitContext,0)


        def init_int(self):
            return self.getTypedRuleContext(ArtGrammarParser.Init_intContext,0)


        def init_bool(self):
            return self.getTypedRuleContext(ArtGrammarParser.Init_boolContext,0)


        def init_str(self):
            return self.getTypedRuleContext(ArtGrammarParser.Init_strContext,0)


        def lst_access(self):
            return self.getTypedRuleContext(ArtGrammarParser.Lst_accessContext,0)


        def lst_add_val(self):
            return self.getTypedRuleContext(ArtGrammarParser.Lst_add_valContext,0)


        def concat(self):
            return self.getTypedRuleContext(ArtGrammarParser.ConcatContext,0)


        def conv_tostr(self):
            return self.getTypedRuleContext(ArtGrammarParser.Conv_tostrContext,0)


        def print_text(self):
            return self.getTypedRuleContext(ArtGrammarParser.Print_textContext,0)


        def init_lst(self):
            return self.getTypedRuleContext(ArtGrammarParser.Init_lstContext,0)


        def math_expr(self):
            return self.getTypedRuleContext(ArtGrammarParser.Math_exprContext,0)


        def size_shape(self):
            return self.getTypedRuleContext(ArtGrammarParser.Size_shapeContext,0)


        def draw_shape(self):
            return self.getTypedRuleContext(ArtGrammarParser.Draw_shapeContext,0)


        def canvas_def(self):
            return self.getTypedRuleContext(ArtGrammarParser.Canvas_defContext,0)


        def fill_def(self):
            return self.getTypedRuleContext(ArtGrammarParser.Fill_defContext,0)


        def outline_def(self):
            return self.getTypedRuleContext(ArtGrammarParser.Outline_defContext,0)


        def func_call(self):
            return self.getTypedRuleContext(ArtGrammarParser.Func_callContext,0)


        def if_else(self):
            return self.getTypedRuleContext(ArtGrammarParser.If_elseContext,0)


        def loop(self):
            return self.getTypedRuleContext(ArtGrammarParser.LoopContext,0)


        def getRuleIndex(self):
            return ArtGrammarParser.RULE_code

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode" ):
                listener.enterCode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode" ):
                listener.exitCode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCode" ):
                return visitor.visitCode(self)
            else:
                return visitor.visitChildren(self)




    def code(self):

        localctx = ArtGrammarParser.CodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_code)
        try:
            self.state = 192
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.dec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.init()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 174
                self.init_int()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 175
                self.init_bool()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 176
                self.init_str()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 177
                self.lst_access()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 178
                self.lst_add_val()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 179
                self.concat()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 180
                self.conv_tostr()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 181
                self.print_text()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 182
                self.init_lst()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 183
                self.math_expr()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 184
                self.size_shape()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 185
                self.draw_shape()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 186
                self.canvas_def()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 187
                self.fill_def()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 188
                self.outline_def()
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 189
                self.func_call()
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 190
                self.if_else()
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 191
                self.loop()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(ArtGrammarParser.Data_typeContext,0)


        def init_int(self):
            return self.getTypedRuleContext(ArtGrammarParser.Init_intContext,0)


        def init_bool(self):
            return self.getTypedRuleContext(ArtGrammarParser.Init_boolContext,0)


        def init_str(self):
            return self.getTypedRuleContext(ArtGrammarParser.Init_strContext,0)


        def init_lst(self):
            return self.getTypedRuleContext(ArtGrammarParser.Init_lstContext,0)


        def getRuleIndex(self):
            return ArtGrammarParser.RULE_dec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDec" ):
                listener.enterDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDec" ):
                listener.exitDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDec" ):
                return visitor.visitDec(self)
            else:
                return visitor.visitChildren(self)




    def dec(self):

        localctx = ArtGrammarParser.DecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self.data_type()
            self.state = 199
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 195
                self.init_int()
                pass

            elif la_ == 2:
                self.state = 196
                self.init_bool()
                pass

            elif la_ == 3:
                self.state = 197
                self.init_str()
                pass

            elif la_ == 4:
                self.state = 198
                self.init_lst()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'
